# delta-dyno-trading

./: .gitignore  LICENSE  README.md  README_TELEMETRY.md  api_server.py  breakout_detective.py  equity_monitor.py  fetch_data.py  main.py  monitor_positions.py  option_stream.py  order_monitor.py  profile_listener.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  trading_limit_order_monitor.py  trading_market_equity_monitor.py
config/: config.ini.example  credentials.py.example
config/templates/: agressive.ini  beleiveBreakout.ini  breakoutAggressive.ini  smallbuy.ini
deltadyno/: __init__.py  constants.py
deltadyno/analysis/: __init__.py  breakout.py  choppy.py  kalman.py  pivots.py  slope.py
deltadyno/api/: __init__.py  server.py
deltadyno/api/middleware/: __init__.py  cors.py
deltadyno/api/routes/: metrics.py  trades.py
deltadyno/config/: __init__.py  database.py  defaults.py  loader.py
deltadyno/core/: __init__.py  breakout_detector.py  position_manager.py
deltadyno/messaging/: __init__.py  redis_queue.py
deltadyno/options/: __init__.py  config.py  fetcher.py  persistence.py  stream_handler.py  subscriber.py
deltadyno/telemetry/: __init__.py  integration.py  manager.py  models.py  storage.py
deltadyno/trading/: __init__.py  constraints.py  equity_monitor.py  order_creator.py  order_monitor.py  orders.py  position_handler.py  position_monitor.py  profile_listener.py
deltadyno/utils/: __init__.py  helpers.py  logger.py  timing.py
docs/: DASHBOARD_BUILDING_PROMPT.md  DATABASE_OPTIMIZATION.md  INTEGRATION_STATUS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  SIMPLE_EXPLANATION.md  TELEMETRY_ARCHITECTURE.md  TELEMETRY_INTEGRATION.md  TELEMETRY_INTEGRATION_NOTES.md  TELEMETRY_TABLES.md
scripts/: __init__.py
scripts/admin/: __init__.py  configToDB.py  manage_clients.py
scripts/data/: __init__.py  market_heatmap_v2.py
scripts/database/: __init__.py  leaderboard_summary.py
scripts/monitoring/: __init__.py  health_checkup_aws.py
scripts/tools/: __init__.py  security_scan.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/scenarios/: __init__.py  test_trading_scenarios.py
tests/unit/: __init__.py  test_equity_monitor.py  test_main_breakout.py  test_option_stream.py  test_order_monitor.py  test_profile_listener.py
